# Numerical_Methods

./: CMakeLists.txt  main.cpp
Eigenvalues/: QR_method.cpp  QR_method.h  RotationMethod.cpp  RotationMethod.h
Solution/: AbstractIters.cpp  AbstractIters.h  LUdecomposition.cpp  LUdecomposition.h  SeidelMethod.cpp  SeidelMethod.h  SimpleIterations.cpp  SimpleIterations.h  Solution.h  ThomasMethod.cpp  ThomasMethod.h
lab2/NewtonSimple/: main.py
lab2/NewtonSimpleSystem/: additional.py  main.py
lab3/3-1/: additional.py  main.py
lab3/3-2/: additional.py  main.py
lab3/3-3/: additional.py  main.py
lab3/3-4/: main.py
lab3/3-5/: main.py
matrix/: matrix.cpp  matrix.h
